--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectVersion=1.0
 sonar.sources=src
 sonar.test=src
 sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/*.module.ts, **/utils/**
+sonar.exclusions=**/*.module.ts, **/utils/**, **/*.interceptor.ts, **/*.controller.ts, **/*.resolver.ts, **/*.dto.ts, **/*.entity.ts, **/shared/**, **/auth/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
